[gd_scene load_steps=6 format=2]

[ext_resource path="res://items/Collectible.gd" type="Script" id=1]
[ext_resource path="res://assets/art/collect items/collect_item_aqua.png" type="Texture" id=2]
[ext_resource path="res://assets/art/collect items/collect item yellow.png" type="Texture" id=3]
[ext_resource path="res://assets/art/sounds/pickup_item.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 65.7875

[node name="Area2D" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )

[node name="SpriteY" type="Sprite" parent="."]
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpriteB" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="tree_entered" from="CollisionShape2D" to="." method="_on_CollisionShape2D_tree_entered"]
